--- a/react_frontend/src/pages/Map.css
+++ b/react_frontend/src/pages/Map.css
@@ -1,3 +1,20 @@
+.container {
+    position: relative;
+}
+
+.moveControler {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateY(-120px);
+}
+
+.moveControler>div {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
 #selectedInfo {
     width: 35%;
     max-width: 300px;
