--- a/react_frontend/src/pages/Map.css
+++ b/react_frontend/src/pages/Map.css
@@ -1,22 +1,33 @@
+.searchArea {
+    width: 100%;
+    padding: 1rem 0;
+}
+
+.searchInput {
+    width: 48%;
+    max-width: 400px;
+    padding-bottom: 0.5rem;
+}
+
+.searchButton {
+    margin: 0 0.2rem;
+}
+
 .container {
     position: relative;
 }
 
 .moveControler {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     transform: translateY(-120px);
 }
 
 .moveControler>div {
-    display: flex;
-    justify-content: center;
     gap: 40px;
 }
 
 #selectedInfo {
     width: 35%;
+    min-width: 175px;
     max-width: 300px;
     position: absolute;
     display: none;
